--- a/nodejs_loginapp/my_app/views/register.ejs
+++ b/nodejs_loginapp/my_app/views/register.ejs
@@ -70,7 +70,7 @@
                                 <br>
                             <%}%>
                         </div>
-                        <form  encType="multipart/form-data" class="form-horizontal" method="post" action="/register/student">
+                        <form  encType="multipart/form-data" class="form-horizontal" method="post" action="/register">
                           <div class="form-group">
                               <label class="control-label col-md-2" for="firstname">First Name:</label>
                               <div class="col-md-4">
@@ -138,7 +138,7 @@
                           <br>
                         <%}%>
 
-                        <form  encType="multipart/form-data" class="form-horizontal" method="post" action="/register/student">
+                        <form  encType="multipart/form-data" class="form-horizontal" method="post" action="/register">
                           <div class="form-group">
                               <label class="control-label col-md-2" for="firstname">First Name:</label>
                               <div class="col-md-4">
