--- a/nodejs_loginapp/my_app/views/home.ejs
+++ b/nodejs_loginapp/my_app/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> SOCH login | Select your role</title>
+    <title> Student Portal Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -65,7 +65,7 @@
                             <%=error%>
                         </div>
                       <%}%>
-                      <form class="form-horizontal" method="post" action="/api/">
+                      <form class="form-horizontal" method="post" action="/student/">
                         <div class="form-group">
                             <label class="control-label col-md-2" for="email">Email:</label>
                             <div class="col-md-10">
