--- a/ner_pos_tagging_app/app/templates/index.html
+++ b/ner_pos_tagging_app/app/templates/index.html
@@ -63,10 +63,10 @@
 						</div>
 						<div class="modal-body">
 						  <p>For Part of Speech Tagging</p>
-						  <code> curl -X GET localhost?sentence=This+application+is+made+by+Aditya.&type=pos </code>
+						  <code> curl -X GET "http://localhost?sentence=This+application+is+made+by+Aditya.&type=pos" </code>
 						  <br><br>
 						  <p>For Named Entity Recognition</p>
-						  <code> curl -X GET localhost?sentence=This+application+is+made+by+Aditya.&type=ner </code>
+						  <code> curl -X GET "http://localhost?sentence=This+application+is+made+by+Aditya.&type=ner" </code>
 						  <br><br>
 						  Response will be Json with status, message and tags.
 						</div>
