--- a/Caption Generator/client_caption_gen/app/templates/index.html
+++ b/Caption Generator/client_caption_gen/app/templates/index.html
@@ -73,7 +73,7 @@
 	    	</div>
 	    	<div class="row" style="margin-top: 2%">
 	    		<div class="col-md-12 text-center">
-	    			<a href="https://github.com/adityajn105/Character-Recognition-webapp">
+	    			<a href="https://github.com/adityajn105/my_docker_files/tree/master/Caption%20Generator">
 	    				<button class="btn btn-default">View Project/Code on Github.</button>
 	    			</a>
 	    		</div>
